fixed white space issue at bottom of page

--- a/major-remake/src/components/footer/footer.style.scss
+++ b/major-remake/src/components/footer/footer.style.scss
@@ -2,14 +2,13 @@
 
 background-size: cover !important;
 -webkit-background-size: cover !important;
-// height: 100%;
-// background-position:;
+height: 90px;
+
 footer {
     padding-top: 48px;
     padding-bottom: 48px;
     margin-top: -200px;
     margin-bottom: 48px;
-    // color: #303030;
     font-size: 14px;
     text-align: center;
     position: relative;
@@ -20,30 +19,6 @@ footer {
  
  footer a, footer a:visited { color: #525252; }
  footer a:hover, footer a:focus { color: #fff; }
- 
-//  /* copyright */
-//  footer .copyright {
-//      margin: 0;
-//      padding: 0;
-//   }
-//  footer .copyright li {
-//      display: inline-block;
-//      margin: 0;
-//      padding: 0;
-//      line-height: 24px;
-//  }
-//  .ie footer .copyright li {
-//     display: inline;
-//  }
-//  footer .copyright li:before {
-//      content: "\2022";
-//      padding-left: 10px;
-//      padding-right: 10px;
-//      color: #095153;
-//  }
-//  footer .copyright  li:first-child:before {
-//      display: none;
-//  }
  
  /* social links */
  footer .social-links {
