--- a/major-remake/src/components/header/header.style.scss
+++ b/major-remake/src/components/header/header.style.scss
@@ -20,8 +20,6 @@
         background-color: #333; 
     }
 
-    // #nav-wrap > a.mobile-btn { display: none; }
-
     .home-container {
         font-family: 'Monoton', cursive;
         height: 100%;
@@ -33,11 +31,6 @@
         &:hover {
             color: rgb(159, 159, 159)
         }
-
-        img {
-            height: 50%;
-            width: 50%;
-        }
     }
 
     .options {
@@ -46,7 +39,6 @@
         display: flex;
         align-items: center;
         justify-content: flex-end;
-
 
         .option {
             padding: 10px 15px;
@@ -58,7 +50,6 @@
                 color: rgb(72, 72, 72)
             }
         }
-
     }
 
     .active {
